fix footer sticky on mobile

--- a/_harp/css/custom.less
+++ b/_harp/css/custom.less
@@ -3,19 +3,14 @@ html {
 	height: 100%;
 }
 body {
-	margin-bottom: 0;
-	height: 100%;
+  height: 100%;
+  display :flex;
+  flex-direction: column;
 }
 .wrapper {
-  min-height: 100%;
-
-  /* Equal to height of footer */
-  /* But also accounting for potential margin-bottom of last child */
-  margin-bottom: -30px;
+  flex: 1 0 auto;
+ 
 }
 footer {
-  left: 0;
-  position: absolute;
-	right: 0;
-	height: 30px;
+  flex-shrink:0; 
 }
